--- a/hw5/Makefile
+++ b/hw5/Makefile
@@ -1,6 +1,6 @@
 hw5: main.o mem.o
-	gcc main.o mem.o -o hw5
+	gcc -std=c99 main.o mem.o -o hw5
 main.o : main.c mem.h
-	gcc -c main.c -Wall
+	gcc -std=c99 -c main.c -Wall
 mem.o : mem.c mem.h
-	gcc -c -Wall mem.c
+	gcc -std=c99 -c -Wall mem.c
