--- a/project/Makefile
+++ b/project/Makefile
@@ -1,10 +1,10 @@
 all: cache
 
-cache: cache_1.o
+cache: cache_1.o 
 	gcc -o cache cache_1.o -lm
 
-cache.o: cache_1.c
-	gcc -c cache_1.c -lm
+cache.o: cache_1.c cache_1.h
+	gcc -c cache_1.c -o cache_1.h -lm
 
 clean:
 	rm *o cache 
